# SakiSSH-Saki-Agent-Secure-Stream

./: .gitignore  20260303_AppStoreReview_Response.md  202605250407_SakiStar_交棒給Claude47的上下文包.md  20260525045821_SakiSSH_OmniaCorePrompt.Promissrum  ARCHITECTURE.md  ARCHITECTURE_en.md  ARCHITECTURE_ja.md  BUILDING.md  BUILDING_ja.md  BUILDING_zh-TW.md  GITHUB_DESCRIPTION.md  LICENSE  README.md  README_en.md  README_ja.md  inject_dsym.sh
.agent/: rules.md
ImplementationLog/: 20260220_0459_SakiStar_ImplementationPlan.md  20260220_0621_SakiStar_ImplementationPlan_802.3_ver1.md  20260225_SakiSSH交叉編譯實作計畫_ImplementationPlan.md  20260226_0110_SakiSSH_Phase14_FinalDeployment_ImplementationPlan.md  202602280622_SakiSSH_文案生成與稽核_ImplementationPlan.md  202602281027_SakiAgentSSH_ImplementationPlan.md  202603272245_SakiSSH_v30協議實作方案設計_ImplementationPlan.md  202605251241_SakiAgentSSH_SASS14_ImplementationPlan.md
SakiAgentSSH-Client/: project.yml
SakiAgentSSH-Daemon/: HelpBook_Outline.md  project.yml
SakiSSH/: .gitignore
Scientia/: 20260224_2055_SakiStar_SakiSSH架構評估_Scientia.md  20260224_2130_SakiStar_基礎設施與SakiSSH標準_Promissrum.md  20260225_SakiSSH_Windows_Setup_Backup.ps1  20260225_SakiSSH與GeminiCLI自動化_Scientia.md  20260225_SakiSSH高併發與Go語言演進_Scientia.md  20260225_macOS交叉編譯Windows_Scientia.md  20260227_0310_SakiSSH_考量框架與開源化路徑_Scientia.md  202602280622_SakiSSH_TargetAnalysis_Scientia.md  20260228_0430_SakiAgentSSH_v020架構決策與部署研究_Scientia.md  20260228_0518_SakiAgentSSH_創世提示詞_Scientia.md  20260228_0525_SakiAgentSSH_安全權限架構研究_Scientia.md  20260228_0528_SakiAgentSSH_跨平台上架研究_Scientia.md  20260228_1030_SakiAgentSSH_創世提示詞_Scientia.md  20260303_0241_SakiSSH_架構現況報告_Scientia.md  20260303_1118_機構匯流排完整情報與理想架構_Scientia.md  20260303_2045_SakiAgentSSH_首次成功部署_Scientia.md  202603272221_SakiSSH_Agent儲存邊界限制跨平台研究_Scientia.md  202603272235_SakiSSH_gRPC_SSH混合協議規範草案_Scientia.md  202603272240_SakiSSH_Agent工具邊界深度逆向研究_Scientia.md  20260407_2023_SakiSSH_v1原始碼分析_Scientia.md  202605141225_SakiAgentSSH_ProjectSpeculari_Scientia.md  202605141240_SakiAgentSSH_Chacha20_13Policy_Feasibility_Scientia.md  202605171130_SakiAgentSSH_RFC技術規格書.md  202605171135_SakiAgentSSH_關於chacha20-poly1305餵食部分之實作方式.Scientia  202605171138_SakiAgentSSH_跨平台Kernel沙盒與防禦實作_Scientia.md  202605171145_SakiAgentSSH_322之亂防禦架構實證_Scientia.md  202605221153_SakiSSH_v5全專案稽核與架構重設計前置研究_Scientia.md  202605250325_SASS_v6_Ring0與WASM_架構研究.md  202605250330_SASS_v6_硬體信任根與密碼學網格_架構研究.md  202605250340_SASS_v6_模型不依賴架構_研究.md  202605250345_2026最新Agent生態系技術線調查_Scientia.md  202605250345_SASS_v6_安全場景預設結果_研究.md  202605250350_SASS_vs_頂級Agent_紅隊稽核與防禦_Scientia.md  202605250400_SASS_v6_焦油坑與認知挑戰整合研究_Scientia.md  202605250402_Abdixere_322之亂深度剖析與防禦研究.md  202605250413_Abdixere_322之亂深度剖析與防禦研究_Claude版.md  202605250429_Abdixere_SASS一致性安全模型與非預期行為收斂研究.md  202605250715_SakiSSH_RFC全協議威脅建模前置分析_Scientia.md  202605250800_SakiSSH_RFC全協議安全審查與威脅建模報告_Scientia.md  202605250830_SakiSSH_破壞性Agent沙盒突破與時序威脅分析_Scientia.md  (+14 more)
TaskLog/: 20260225_2015_SakiStar_Phase13第二步完成_TaskMELIUS.md  20260225_SakiSSH實作與整合_TaskMELIUS.md  20260225_SakiSSH最終完成_TaskMELIUS.md  202602281027_SakiAgentSSH_Task04.md  (+28 more)
saki-ssh-client/: Cargo.toml  auth_output.txt
saki-ssh-client/src/: main.rs
saki-ssh-daemon/: Cargo.toml  authorized_agents.json  build.rs
saki-ssh-daemon/src/: audit.rs  auth.rs  branch_mgr.rs  capability.rs  challenge_store.rs  codec.rs  config.rs  env_injector.rs  kernel_bridge.rs  localhost_defense.rs  main.rs  policy.rs  quota.rs  session.rs  snapshot.rs  tarpit.rs  threat_defense.rs  v6_integration.rs  watchdog.rs
sakissh-ca/: Cargo.toml
sakissh-ca/src/: main.rs
(+378 files in other folders)
